<resources>
    <string name="app_name">practica1</string>
    <string name="mailInputText">Correo</string>
    <string name="passInputText">Contraseña</string>
    <string name="idInputText">ID</string>
    <string name="buttonSignIn">Entrar</string>
    <string name="buttonRegister">¿No te has registrado aún?</string>
    <string name="registerTitle">Registro</string>
    <string name="nameInputText">Nombre</string>
    <string name="passInputTextRepeat">Repita la contraseña</string>
    <string name="signUp">Registrarse</string>
    <string name="update">Actualizar</string>
    <string name="remove">Borrar</string>
    <string name="logout">Log out</string>
    <string name="welcome">Bienvenido</string>
</resources>
